[package]
name = "webexterm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.25.0", features = ["event-stream"] }
hyper = { version = "0.14.20", features = ["full"] }
hyper-tls = "0.5.0"
oauth2 = "4.3.0"
tokio = { version = "1.21.2", features = ["full"] }
tui = "0.19.0"
webex = { version = "0.9.0", path = "/home/abel/webex-rust" }
